added categories route and updated Swagger documentation
