# src/controllers/categories.js
@@ -2,9 +2,13 @@ import { Category } from "../models/category.js";
 
 export async function listStoryCategoriesController(req, res, next) {
   try {
-    const categories = await Category.find({}, "_id name").lean();
+    const categories = await Category.find(
+        {}, 
+        "_id name", 
+        { sort: { name: 1 } }
+    ).lean();
 
-    res.json({
+    res.status(200).json({
       status: 200,
       message: "Successfully found story categories!",
       data: categories,
@@ -13,4 +17,3 @@ export async function listStoryCategoriesController(req, res, next) {
     next(error);
   }
 }
-
